--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,10 @@
-group 'com.leopold.kotlin'
-version '1.0'
-
 buildscript {
     ext.kotlin_version = '1.1.2-2'
 
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -16,6 +14,11 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 sourceCompatibility = 1.8
+
+sourceSets {
+    main.java.srcDirs += 'src'
+    test.java.srcDirs += 'test'
+}
 
 repositories {
     mavenCentral()
